# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.602 2006/04/19 14:28:40 wolf31o2 Exp $

  19 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removed bootplash support from ppc/ppc64 since they only will work with
  gensplash. Forced use of livecd/splash_type of bootsplash to get
  splash=silent. This should reduce the number of things on the kernel command
  line that aren't necessary.

  18 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
  modules/catalyst_support.py:
  Added patch from Andrew Gaffney <agaffney@gentoo.org> to re-write
  parse_spec. This should resolve bug #130103, as well as make the code much
  cleaner. This is 2.0_rc42.

  18 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Forced -p on tar for compressing stages.

  18 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Fixed fetchonly option for stages 1 through 3 and livecd-stage1, and
  possibly others.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/build.py:
  Added patch to build.py for portage 2.1 support.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Fixed genkernel initramfs overlay support. Thanks to Alvin Lee
  <liyiming@ict.ac.cn> in bug #129890.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Moved sed line for ##STARTX to end of file, since we aren't touching
  /etc/startx until the end.

  17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added a check for the games group and add it if it doesn't exist already.
  This should resolve bug #125498.

  13 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,